--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -24,11 +24,22 @@
     color: black;
   }
   body{
+    width: auto;
+    height: auto;
     background-color: white;
   }
   
   @media (min-width: 576px){
-    
+    header{
+      width: inherit;
+      height: auto;
+    }
+    header .headings{
+      display: grid;
+      place-content: center;
+      width: 100%;
+      height: auto;
+    }
   }
 
   @media (min-width: 768px) {
