--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -19,13 +19,19 @@
   box-sizing: border-box;
 }
 
+body{
+  width: 100vw;
+  height: 100vh;
+  margin: 0px auto;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+}
+
 @media (prefers-color-scheme:light){
   *{
     color: black;
   }
   body{
-    width: auto;
-    height: auto;
     background-color: white;
   }
   
@@ -35,10 +41,17 @@
       height: auto;
     }
     header .headings{
+      position: relative;
       display: grid;
       place-content: center;
-      width: 100%;
-      height: auto;
+      width: inherit;
+      height: max-content;
+    }
+    header .headings img{
+      position: absolute;
+      z-index: 3;
+      display: block;
+
     }
   }
 
